# Xian

./: .gitignore  .hgignore  .hgsub  .hgsubstate  License.rtf  index.html
Common/: AssemblyInfo.cs  AttributeExtensionFilter.cs  Attributes.cs  BasicExtensionPointManager.cs  ClassNameExtensionFilter.cs  ClearCanvas.Common.Platform.csproj  ClearCanvas.Common.SR.resources  ClearCanvas.Common.csproj  ClearCanvas.Common.xml  ClearCanvas.Dicom.sln  ClearCanvas.Strings.targets  CodeClock.cs  CollectionEventArgs.cs  Counter.cs  DataContractBase.cs  DefaultClock.cs  DefaultExtensionFactory.cs  DefaultPerformanceCounter.cs  DynamicBuffer.cs  DynamicObservablePropertyBinding.cs  EventsHelper.cs  ExceptionPolicyBase.cs  ExceptionPolicyFactory.cs  Exceptions.cs  Extension.cs  ExtensionFilter.cs  ExtensionInfo.cs  ExtensionLoader.cs  ExtensionOfAttribute.cs  ExtensionPoint.cs  ExtensionPointAttribute.cs  ExtensionPointInfo.cs  ExtensionSettings.cs  FatalExceptionHandler.cs  FileProcessor.cs  FloatComparer.cs  FrameHeader.cs  GuiToolkitAttribute.cs  GuiToolkitID.cs  IApplicationRoot.cs  (+52 more)
Common/Actions/: ActionSet.cs  IActionItem.cs  IActionSet.cs  IXmlActionCompilerOperator.cs  XmlActionCompiler.cs  XmlActionCompilerException.cs  index.html
Common/Alert/: Alert.cs
Common/Application/: ActivationChangedEventArgs.cs  Application.csproj  Class1.cs  ClearCanvas.Common.Application.csproj  CommandAddedEventArgs.cs  CommandHistory.cs  IMemento.cs  IMemorable.cs  IWorkspaceView.cs  SR.Designer.cs  ViewFactory.cs  Workspace.cs  WorkspaceCollection.cs  actionmodels.xml
Common/Audit/: AuditEntryInfo.cs  AuditLog.cs  AuditLogEntryDetail.cs  IAuditSink.cs  index.html
Common/Auditing/: AuditManager.cs  Auditor.cs  IAuditMessage.cs  IAuditor.cs
Common/Authorization/: AuthorityGroupDefinition.cs  AuthorityGroupSetup.cs  AuthorityTokenAttribute.cs  AuthorityTokenDefinition.cs  IDefineAuthorityGroups.cs  index.html
Common/Caching/: Cache.cs  CacheClientLoggingDecorator.cs  CacheException.cs  CacheGetOptions.cs  CacheOptionsBase.cs  CacheProviderInitializationArgs.cs  CachePutOptions.cs  CacheRemoveOptions.cs  DefaultCacheClient.cs  DefaultCacheProvider.cs  ICacheClient.cs  ICacheProvider.cs  IDefinesCacheKey.cs  IStreamingCache.cs
Common/ClassDiagrams/: index.html
Common/ClearCanvas.Common.DICOM/: Xian.Common.DICOM.sln
Common/ClearCanvas.Common.DICOMs/: SR.resx
Common/ClearCanvas.Common.Dicom/: ClearCanvas.Common.Dicom.csproj  SR.cs  SR.resx
Common/ClearCanvas.Common.Platform/: ClearCanvas.Common.Platform.csproj  SR.cs  SR.resx  SR.strings  Xian.Common.Platform.csproj
Common/ClearCanvas.Dcmtk/: ClearCanvas.Dcmtk.vcproj  dcm_typemaps.i  dcmdata.i  dcmnet.i  dcmtk.i  dcmtk_wrap.cxx  ofstd.i  stdafx.cpp
Common/Configuration/: ApplicationCriticalSettingsProvider.cs  ApplicationSettingsExtensions.cs  ApplicationSettingsHelper.cs  ApplicationSettingsRegister.cs  ApplicationSettingsRegistry.cs  ConfigurationDocumentHeader.cs  ConfigurationDocumentKey.cs  ConfigurationDocumentQuery.cs  (+27 more)
Desktop/: ActionModelRenderer.cs  ActivationChangedEventArgs.cs  AlertLevel.cs  AlertLog.cs  AlertNotificationArgs.cs  AlertViewerComponent.cs  Application.cs  ApplicationComponent.cs  ApplicationComponentContainer.cs  ApplicationComponentHost.cs  ApplicationComponentHostDialog.cs  ApplicationComponentHostShelf.cs  ApplicationComponentHostWorkspace.cs  ApplicationComponentHostWorkspaceView.cs  ApplicationComponentViewAttribute.cs  ApplicationComponents.cd  ApplicationSettingsRegistry.cs  ApplicationTheme.cs  ApplicationThemeManager.cs  ApplicationThemeResourceProviderBase.cs  ApplicationThemeResourceResolver.cs  AssociateViewAttribute.cs  Async.cs  AsyncTask.cs  BackgroundTask.cs  BlockingOperation.cs  Checkable.cs  ChildComponentHost.cs  ClearCanvas.Common.Application.csproj  ClearCanvas.Desktop.SR.resources  ClearCanvas.Desktop.csproj  ClearCanvas.Desktop.xml  CloseHelperComponent.cs  CloseHelperTool.cs  ClosedEventArgs.cs  ClosingEventArgs.cs  CodeEditorFactory.cs  Command.cs  CommandAddedEventArgs.cs  CommandHistory.cs  (+192 more)
Dicom/: AETitle.cs  AbstractAttribute.cs  AbstractMessage.cs  Accession.cs  ApplicationEntity.cs  AttributeBinary.cs  AttributeCollection.cs  AttributeMultiValueText.cs  AttributeSQ.cs  AttributeSingleValueText.cs  ClearCanvas.Dicom.csproj  ClearCanvas.Dicom.sln  ComparisonResultType.cs  ComponentGroup.cs  DateParser.cs  DateRangeHelper.cs  DateRangeParser.cs  DateTimeParser.cs  Dcm.cs  Delegates.cs  DicomAttribute.cs  DicomAttributeBinary.cs  DicomAttributeCollection.cs  DicomAttributeComparisonResult.cs  DicomAttributeMultiValueText.cs  DicomAttributeSQ.cs  DicomAttributeSingleValueText.cs  DicomClient.cs  DicomDataException.cs  DicomDirectory.cs  DicomDirectoryWriter.cs  DicomException.cs  DicomFieldAttribute.cs  DicomFile.cs  DicomFragmentSequence.cs  DicomHelper.cs  DicomImage.cs  DicomImplementation.cs  DicomLogger.cs  DicomMessage.cs  (+58 more)
ImageViewer/: ActionPlaceholder.cs  ActiveImageViewerChangedEventArgs.cs  AnnotationBox.cs  AnnotationConfiguration.cs  AnnotationConfigurationManager.cs  AnnotationItemConfigurationOptions.cs  AnnotationItemProviderManager.cs  AnnotationLayout.cs  AnnotationLayoutManager.cs  AnnotationManager.cs  AuthorityTokens.cs  AutoVoiLutLinear.cs  BasicImageOperation.cs  BasicPresentationImage.cs  CaptureUIEventHandler.cs  ClearCanvas.ImageViewer.SR.resources  ClearCanvas.ImageViewer.csproj  ClearCanvas.ImageViewer.xml  ClearCanvas.Workstation.Model.csproj  ClearCanvasMono.sln  ClearCanvasStandard.sln  ClientArea.cs  CloningExceptions.cs  ColorPresentationImage.cs  ContextMenuEventArgs.cs  DiagnosticImageViewerComponent.cs  DicomAnnotationConfiguration.cs  DicomColorPresentationImage.cs  DicomGrayscalePresentationImage.cs  DicomPaletteColorPresentationImage.cs  DicomPresentationImageSettings.Designer.cs  DicomPresentationImageSettings.cs  DicomPresentationImageSortByInstanceNumber.cs  DisplaySet.cs  DisplaySetChangedEventArgs.cs  DisplaySetChangingEventArgs.cs  DisplaySetCollection.cs  DisplaySetDescriptor.cs  DisplaySetEventArgs.cs  DisplaySetFactories.cs  (+184 more)
(+19784 files in other folders)
